--- a/tabelalonga.html
+++ b/tabelalonga.html
@@ -7,6 +7,17 @@
     <title>Tabela Final</title>
 </head>
 <body>
-    
+    <table>
+        <tr><th style="padding-right: 400px;font-size: xx-large;">Imagem</th>
+            <th style="padding-right: 400px;font-size: xx-large;">Home</th>
+            <th style="padding-right: 400px;font-size: xx-large;">Sobre</th>
+            <th style="padding-right: 400px;font-size: xx-large;">Contato</th>
+        </tr>
+
+        <tr><td style="font-size: x-large"> <br> 1. Item</td>
+        <td rowspan="3" style="padding-right: 50px;padding-top: 30px;"> <img src="muçei.jpg" alt="" ><p>DESCRIÇÃO</p></td>
+        <td rowspan="3" style="padding-right: 50px;padding-top: 30px;"> <img src="muçei.jpg" alt="" ><p style="text-align: center;">DESCRIÇÃO</p></p></td>        
+        </tr>
+    </table>
 </body>
 </html>
